k8s/indexer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-deployment
  labels:
    app: indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      containers:
      - name: indexer
        image: brhon/kubi-indexer:latest
