k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubi-ingress
spec:
  rules:
  - host: kubi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port: 
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 8000
